# 8v

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  release.sh
o8v/: .aider.conf.yml  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  build.rs
o8v-check/: Cargo.toml
o8v-check/src/: lib.rs
o8v-check/tests/: integration_pipeline.rs
o8v-core/: Cargo.toml  DESIGN.md
o8v-core/src/: caller.rs  check.rs  command.rs  command_events.rs  diagnostic.rs  diagnostic_builder.rs  display_str.rs  event_bus.rs  event_channel.rs  extensions.rs  fmt.rs  lib.rs  mime.rs  process_report.rs  symbols.rs  task.rs  timeout.rs
o8v-core/src/events/: benchmark.rs  build.rs  check.rs  fmt.rs  lifecycle.rs  mod.rs  run.rs  test.rs  upgrade.rs
o8v-core/src/project/: error.rs  mod.rs  path.rs  project.rs
o8v-core/src/render/: build_report.rs  check_human.rs  check_json.rs  check_plain.rs  config.rs  error_envelope.rs  fmt_human.rs  fmt_json.rs  fmt_plain.rs  hooks_report.rs  impls.rs  init_report.rs  log_report.rs  ls_report.rs  mod.rs  output.rs  read_report.rs  renderable.rs  run_report.rs  sanitize.rs  search_report.rs  stats_report.rs  stats_view.rs  stream_human.rs  stream_json.rs  stream_plain.rs  summary.rs  test_report.rs  upgrade_report.rs  write_report.rs
o8v-core/src/stats/: duration_stats.rs  failure_hotspot.rs  mod.rs  report.rs  stats_row.rs
o8v-core/src/types/: argv_shape.rs  command_name.rs  mod.rs  percentile.rs  session_id.rs  timestamp.rs  warning.rs  warning_sink.rs
o8v-core/tests/: e2e_smoke.rs  e2e_stack_dotnet.rs  e2e_stack_node.rs  e2e_violations.rs  lib_smoke.rs  lib_stack_node.rs  lib_violations.rs
o8v-events/: Cargo.toml
o8v-events/src/: lib.rs
o8v-fs/: Cargo.toml
o8v-fs/src/: composite.rs  config.rs  content.rs  error.rs  file.rs  fs_trait.rs  guard.rs  lib.rs  root.rs  safe_fs.rs  scan.rs  write_guard.rs
o8v-fs/tests/: integration_read.rs  integration_scan.rs  security_path_traversal.rs  stress_filesystem.rs  unit_safefs_path_traversal.rs  unit_safefs_symlink.rs
o8v-process/: Cargo.toml  LICENSE
o8v-process/src/: capture.rs  config.rs  format.rs  kill.rs  lib.rs  process_report.rs  result.rs  run.rs
o8v-process/tests/: integration_process.rs
o8v-project/: Cargo.toml
o8v-project/benches/: detect.rs
o8v-project/src/: error.rs  lib.rs  path.rs  project.rs  stack.rs
o8v-project/src/detectors/: deno.rs  dockerfile.rs  dotnet.rs  erlang.rs  go.rs  helm.rs  java.rs  javascript.rs  kotlin.rs  kustomize.rs  mod.rs  npm.rs  python.rs  ruby.rs  rust.rs  swift.rs  terraform.rs  typescript.rs
o8v-project/tests/: integration_corpus.rs  integration_detect.rs  integration_manifest.rs  security_manifest.rs  stress_detection.rs  unit_validation.rs
o8v-stacks/: Cargo.toml
o8v-stacks/src/: detect.rs  enrich.rs  fmt.rs  lib.rs  resolve_tool.rs  runner.rs  stack_tools.rs  tool.rs  tool_resolution.rs
o8v-stacks/src/detectors/: deno.rs  dockerfile.rs  dotnet.rs  erlang.rs  go.rs  helm.rs  java.rs  javascript.rs  kotlin.rs  kustomize.rs  mod.rs  npm.rs  python.rs  ruby.rs  rust.rs  swift.rs  terraform.rs  typescript.rs
o8v-stacks/src/parse/: biome.rs  cargo.rs  deno.rs  dotnet.rs  eslint.rs  go_test_json.rs  govet.rs  hadolint.rs  helm.rs  javac.rs  ktlint.rs  kustomize.rs  libtest_json.rs  mod.rs  mypy.rs  oxlint.rs  prettier.rs  pytest_text.rs  rebar_compile.rs  rebar_dialyzer.rs  rebar_xref.rs  rubocop.rs  ruff.rs  rustfmt.rs  shellcheck.rs  staticcheck.rs  swiftlint.rs  tflint.rs  tsc.rs
o8v-stacks/src/stacks/: deno.rs  dockerfile.rs  dotnet.rs  erlang.rs  go.rs  helm.rs  java.rs  javascript.rs  kotlin.rs  kustomize.rs  mod.rs  node.rs  python.rs  ruby.rs  rust.rs  shell.rs  swift.rs  terraform.rs  typescript.rs
o8v-stacks/tests/: integration_enrich.rs  integration_fmt.rs  integration_tool.rs  lib_parse_composed.rs
o8v-stacks/tests/fixtures/: dotnet.txt
o8v-testkit/: Cargo.toml
o8v-testkit/src/: assert.rs  binary.rs  diagnostic.rs  expected.rs  fixture.rs  integration.rs  json.rs  lib.rs  measurement.rs  query.rs  release_server.rs  run.rs  sanitize.rs  scaffold.rs  tests.rs
o8v-testkit/src/benchmark/: claude.rs  codex.rs  experiment.rs  mod.rs  pipeline.rs  preflight.rs  provenance.rs  report.rs  store.rs  types.rs
o8v-testkit/src/tests/: coverage.rs  expected.rs  fixtures.rs  mod.rs  outcome.rs  parsed_diagnostics.rs  report_nav.rs  unit_adversarial.rs
o8v-testkit/tests/: benchmark_events_ndjson.rs
o8v-workspace/: Cargo.toml
o8v-workspace/src/: config.rs  context.rs  lib.rs  storage.rs
o8v/src/: dispatch.rs  event_reader.rs  events.rs  lib.rs  main.rs  path_util.rs  signal.rs  stats_histogram.rs  storage_subscriber.rs  tracing.rs  util.rs
o8v/src/aggregator/: aggregate_events.rs  argv_normalizer.rs  cluster_detection.rs  failure_hotspot.rs  mod.rs  session_aggregate.rs  sliding_window.rs
o8v/src/cli/: common.rs  mod.rs  signal.rs  time_utc.rs  version.rs
o8v/src/commands/: build.rs  check.rs  fmt.rs  hooks.rs  init.rs  ls.rs  mod.rs  output_format.rs  read.rs  run.rs  search.rs  stats.rs  test.rs  upgrade.rs  write.rs
o8v/src/hook/: argv_map.rs  dispatch.rs  mod.rs  payload.rs  (+2 more)
o8v/tests/: agent_benchmark.rs  agent_benchmark_v2.rs  bin_e2e.rs  bug_fixes.rs  contract_build_test_missing_tool.rs  contract_fmt.rs  contract_hooks.rs  contract_no_symlink_loops.rs  contract_path_containment.rs  contract_upgrade.rs  counterexamples_basic_ops.rs  counterexamples_hook_behavior.rs  counterexamples_hook_redaction.rs  counterexamples_session_filter.rs  counterexamples_stats.rs  counterexamples_stats_v2.rs  demo_agent_benchmark.rs  e2e_b2b_json_envelope.rs  e2e_b3_search_silent_failure.rs  e2e_build.rs  e2e_check.rs  e2e_cli.rs  e2e_deno.rs  e2e_dispatch_output_bytes.rs  e2e_dockerfile.rs  e2e_dotnet.rs  e2e_error_messages.rs  e2e_error_prefix_contract.rs  e2e_errors_first.rs  e2e_events.rs  e2e_fmt_check.rs  e2e_go.rs  e2e_help_texts.rs  e2e_hook.rs  e2e_hooks_json.rs  e2e_infra.rs  e2e_init.rs  e2e_init_help.rs  e2e_init_render.rs  e2e_java.rs  (+43 more)
(+371 files in other folders)
