[workspace]
members = [
    "o8v-fs",
    "o8v-process",
    "o8v-core",
    "o8v-stacks",
    "o8v-check",
    "o8v-testkit",
    "o8v",
]
exclude = [
    "o8v-core/tests/fixtures",
    # absorbed into o8v-stacks and o8v; kept as reference until deletion is confirmed
    "o8v-project",
    "o8v-workspace",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"
repository = "https://github.com/8network/8v"
homepage = "https://8vast.io"
