[package]
name = "o8v-check"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license = "BSL-1.1"
authors = ["Soheil Alizadeh <soheil@8network.io>"]
readme = "../README.md"
description = "Check orchestration for 8v — detect projects, plan checks, run them, report results"

[dependencies]
o8v-core = { path = "../o8v-core", version = "0.1.0" }
o8v-stacks = { path = "../o8v-stacks", version = "0.1.0" }
o8v-fs = { path = "../o8v-fs", version = "0.1.0" }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
o8v-testkit = { path = "../o8v-testkit", version = "0.1.0" }
o8v-stacks = { path = "../o8v-stacks", version = "0.1.0" }
