[package]
name = "o8v-core"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license = "BSL-1.1"
authors = ["Soheil Alizadeh <soheil@8network.io>"]
description = "Core engine for 8v — check, format, and stack tools for code reliability"

[dependencies]
o8v-fs = { path = "../o8v-fs", version = "0.1.0" }
o8v-process = { path = "../o8v-process", version = "0.1.0" }
o8v-project = { path = "../o8v-project", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
o8v-testkit = { path = "../o8v-testkit", version = "0.1.0" }
