[package]
name = "o8v-events"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors = ["Soheil Alizadeh <soheil@8network.io>"]
license = "BSL-1.1"
readme = "../README.md"
description = "Event sourcing infrastructure for 8v — persist check results for trend analysis"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
