[package]
name = "o8v-fs"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license = "MIT"
authors = ["Soheil Alizadeh <soheil@8network.io>"]
readme = "../README.md"
description = "Safe filesystem access — symlink containment, FIFO rejection, size limits, BOM stripping"

[dependencies]
fs2 = "0.4"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
