[package]
name = "o8v-project"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license = "BSL-1.1"
authors = ["Soheil Alizadeh <soheil@8network.io>"]
readme = "../README.md"
description = "Project detection for 8v — identifies stacks from manifest files"

[dependencies]
o8v-fs = { path = "../o8v-fs", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
quick-xml = { version = "0.37", features = ["serialize"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"

[[bench]]
name = "detect"
harness = false
