[package]
name = "o8v-testkit"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license = "BSL-1.1"
authors = ["Soheil Alizadeh <soheil@8network.io>"]
publish = false
description = "Test infrastructure for 8v — fixtures, assertions, E2E helpers"

[dependencies]
o8v-core = { path = "../o8v-core", version = "0.1.0" }
o8v-check = { path = "../o8v-check", version = "0.1.0" }
o8v-fs = { path = "../o8v-fs", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tiny_http = "0.12"
sha2 = "0.10"
toml = "0.8"
tracing = "0.1"
ureq = { version = "2", features = ["rustls"], default-features = false }
