[package]
name = "o8v"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license = "BSL-1.1"
authors = ["Soheil Alizadeh <soheil@8network.io>"]
description = "CLI for 8v — one command checks everything"
readme = "../README.md"
keywords = ["mcp", "polyglot", "code-checker", "ai-coding", "devtools"]
categories = ["development-tools", "command-line-utilities"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "8v"
path = "src/main.rs"

[dependencies]
o8v-fs = { path = "../o8v-fs", version = "0.1.0" }
o8v-process = { path = "../o8v-process", version = "0.1.0" }
o8v-core = { path = "../o8v-core", version = "0.1.0" }
o8v-stacks = { path = "../o8v-stacks", version = "0.1.0" }
o8v-check = { path = "../o8v-check", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
shlex = "1"
ctrlc = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "2", features = ["rustls"] }
sha2 = "0.10"
semver = "1"
rmcp = { version = "1.3.0", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt", "io-std"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
dialoguer = "0.11"
serde_json = "1"
base64 = "0.22"
toml = "0.8"
url = "2"
ignore = "0.4"
regex = "1"
ulid = "1"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
serial_test = "3"
o8v-testkit = { path = "../o8v-testkit", version = "0.1.0" }
assert_cmd = "2"
predicates = "3"
